Fix logo align.

--- a/src/assets/scss/sd.scss
+++ b/src/assets/scss/sd.scss
@@ -279,8 +279,6 @@ a .hidden-link-text {
   .sd-navbar-top.navbar-default {
     .navbar-header {
       width: auto;
-    }
-    .navbar-brand {
       float: right;
     }
   }
