--- a/src/assets/stylesheets/style.css
+++ b/src/assets/stylesheets/style.css
@@ -425,8 +425,7 @@ a .hidden-link-text {
   .jumbo-intro {
     padding-bottom: 0px; }
   .sd-navbar-top.navbar-default .navbar-header {
-    width: auto; }
-  .sd-navbar-top.navbar-default .navbar-brand {
+    width: auto;
     float: right; } }
 
 /* Medium Devices, Desktops */
